# HydXS

./: .gitignore  DockerFile  README.md  environment.yml  pyproject.toml  setup.py
HydXS/: 01_wrangle_cross_section-prev.py  01_wrangle_cross_section.py  02_xs_preprocessor.py  03_BankFullDetection_NEW.py  03_HydXS_modelling.py  03_spline_withR_NEW.py  04_HydXS_output.py  05_HydXS_attachModelResults.py  BankFullDetection_NEW.py  BankFullDetection_orig.py  HydXS_attachModelResults.py  HydXS_modelling.py  HydXS_output.py  __init__.py  calculate_xs_metrics.py  cli_interface.py  deRosa_attachModelResults.py  deRosa_modelling.py  deRosa_modelling_orig.py  deRosa_output.py  run_HydXS.py  run_deRosa_outsidePipeline.py  spline_withR_NEW.py  spline_withR_orig.py  wrangle_cross_section.py  xs_preprocessor.py
help/: README.md
help/source/: conf.py
test_data/: HydXS_test_data.csv
tests/integration_tests/: hydxs_integration_test.py
tools/: BankElevationDetection.py  README.md  XSGenerator.py  spline_withR.py
utils/: README.md  __init__.py  geometry.py
