[project]
name = "HydXS"
version = "0.1a"
description = "A tool for automatic detection of bankfull boundaries from river cross section data"
authors = [
    { name = "kathryn russell", email = "kathryn.russel@unimelb.edu.au" }
]
license = { text = "CC" }
readme = "README.md"
requires-python = ">=3.13"
urls = { homepage = "http://github.com/sailngarbwm/HydXS" }

[project.scripts]
hydxs = "HydXS.cli_interface:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
HydXS = { path = ".", editable = true }

[tool.pixi.dependencies]
matplotlib = "*"
pandas = "*"
scipy = "*"
typer = "*"
nomkl = "*"
rpy2 = "*"
r-base = "*" # conda-forge uses r-base instead of r
shapely = "*"
geopandas = "*"
pytest = "*"
rioxarray = ">=0.9.1,<0.10"
ipykernel = ">=6.16.2,<7"
python = ">=3.13,<3.14"
pyogrio = ">=0.12.1,<0.13"


# [tool.pixi.pypi-dependencies]
